Boilerplate Backend Express/devops/templates/01-namespace.tpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
