Boilerplate Backend Express/devops/templates/03-deployment.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
  name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
    spec:
      containers:
      - image: 635976616010.dkr.ecr.us-east-1.amazonaws.com/${BITBUCKET_REPO_SLUG}:${BITBUCKET_COMMIT}
        imagePullPolicy: IfNotPresent
        name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}       
        ports:
        - containerPort: ${APP_PORT}
        readinessProbe:
          tcpSocket:
            port: ${APP_PORT}
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: ${CPU_VALUE}
            memory: ${MEMORY_VALUE}
          requests:
            cpu: ${CPU_VALUE}
            memory: ${MEMORY_VALUE}
