Boilerplate Backend Express/devops/templates/04-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
  name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
spec:
  ports:
    - port: 80
      targetPort: ${APP_PORT}
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${BITBUCKET_REPO_SLUG}-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}
